--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@ h2{
    text-align: center;
 
 }
+label {
+   margin-left: 60px !important;
+}
  </style>
 </head>
 
@@ -93,7 +96,7 @@ h2{
               
                <li><a href="#"><i class="fa fa-skype"></i></a></li>
 
-               <li<a href="" target="_blank"><i class="fab fa-tiktok"></i>
+               <li<a href="#" target="_blank"><i class="fab fa-tiktok"></i>
                   <li><a class="iconify" data-icon="fa-brands:tiktok" data-inline="false"></a></li>
 
                <li<a class="iconify" data-icon="fa-brands:discord" data-inline="false"><a></li>              </a></li>
@@ -212,7 +215,7 @@ h2{
    <section id="portfolio">
 
       <div class="row">
-         <h2>Check Out Some of My Success</h2>
+         <h2>Check Out Some of My Success Stories</h2>
          <div class="twelve columns collapsed">
 
             <!-- portfolio-wrapper -->
@@ -317,7 +320,7 @@ h2{
 
 		      <div class="description-box">
 			      <h4>Gamer</h4>
-               <p>he got Booah! many time in FreeFire game thanks to his mastery and skills of it </p>              
+               <p>he got Booyah ! many time in FreeFire game thanks to his mastery and skills of it </p>              
 		      </div>
 
             <div class="link-box">
@@ -523,7 +526,7 @@ h2{
                   </div>
 
                   <div>
-						   <label for="contactSubject">Subject</label>
+						   <label for="contactSubject">Subject <span class="required">*</label>
 						   <input type="text" value="" size="35" id="contactSubject" name="contactSubject">
                   </div>
 
@@ -575,15 +578,7 @@ h2{
 
          <div class="twelve columns">
 
-            <ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
-            </ul>
+         
 
             <ul class="copyright">
                <li>&copy;  NTI 2021 </li>
