--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@ h2{
 label {
    margin-left: 60px !important;
 }
+.img{
+   height: 10% !important;
+   width: 10% !important;
+}
+.imgsport {
+   height: 15% !important;
+   width: 15% !important;
+}
  </style>
 </head>
 
@@ -75,6 +83,7 @@ label {
 	         <li><a class="smoothscroll" href="#resume">Activity</a></li>
             <!-- <li><a class="smoothscroll" href="#portfolio">Successes</a></li> -->
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
+            <li><a  href="./shop.html">My Shop</a></li>
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
@@ -82,25 +91,22 @@ label {
          <div class="banner-text">
             <br><br><br>
             <h1 class="responsive-headline">I'm Wassimos</h1>
-            <img src="./wass.png"/>
-            <img src="./was2.png"/>
-            <h3><b>  Content creator YouTube <br>  Business manager:@bassem_sayadi <br> Professional streamer for @nonolive.arabia
-
+            <a href="https://www.youtube.com/channel/UC-SaGu04sXWXV2RnD99kKUQ" target="_blank"><img class="imgsport" src="./e-sport.png"  /></a> <br>
+            <a href="https://www.youtube.com/channel/UCk7XR2tWv5GYKH4uhUPddXw" target="_blank"><img class="img" src="./wass.png" /></a>
+            <a href="https://www.youtube.com/channel/UCoaWkAkU4U9Xc_GB6ML43vQ" target="_blank"><img class="img" src="./wass3.png" /></a>
+            <a href="https://www.youtube.com/channel/UCXfdMZ7hQnzmumdnggcFozw?fbclid=IwAR1IHW9ao1vnPbY96PylFYFJkTam9AB5m46kDCuJp5qoENWr8PR-19chmO4" target="_blank"><img class="img" src="./wass5.png" /></a> 
+            <a href="https://www.youtube.com/channel/UC3YqUthlJCUIKcsjTtNgf1A" target="_blank"><img class="img" src="./was1.png" /></a>
+            <h3><b>  Content creator YouTube <br>  Business manager: <a href="https://www.instagram.com/bassem_sayadi/?hl=en" target="_blank"> @bassem_sayadi </a><br> Professional streamer for <a href="https://www.nonolive.com/34969242" target="_blank"> @nonolive.arabia</a>
+    
              </h3>
-            <hr />
+            <hr/>
             <ul class="social">
                <li><a href="https://www.facebook.com/dictatorsyt/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="" target="_blank"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://twitter.com/wassimostv?lang=en&fbclid=IwAR1bZ5JP8SOGdagCfZRE4lMCKjs_DfkZk20muJHckZHhrmIGFsNjW_tmu_M" target="_blank"><i class="fa fa-twitter"></i></a></li>
                <li><a href="https://www.youtube.com/c/wassimos/?fbclid=IwAR3imBsmom0wIxgXx04iQcghSpBWlQPeaWkhvzai_YdIcbprJ64g1fJg8hM" target="_blank"><i class="fa fa-youtube"></i></a></li>
                <li><a href="https://www.instagram.com/wassimostv/?fbclid=IwAR0BwhSVycT5yojvCjcZ-mACYZWTC1rkhp5hGTefdz7pCR0CV0LjakjcvYI" target="_blank"><i class="fa fa-instagram"></i></a></li>
-              
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
-
-               <li<a href="#" target="_blank"><i class="fab fa-tiktok"></i>
-                  <li><a class="iconify" data-icon="fa-brands:tiktok" data-inline="false"></a></li>
-
-               <li<a class="iconify" data-icon="fa-brands:discord" data-inline="false"><a></li>              </a></li>
-
+               <li><a href="https://www.tiktok.com/@wasimostv?_d=secCgYIASAHKAESMgowS%2BTW20PEaOR%2FdM3wyy%2FY5gnWdU6cGPGCtxOmXkTDb2uC94oFYgBKjARMK8eFjQj0GgA%3D&language=en&sec_uid=MS4wLjABAAAA6m8Suo_N9okakwN8AoziR464IHb2es3HK5VIESq2jmHzrGq7S5UHUorMwFxpORBL&sec_user_id=MS4wLjABAAAA6m8Suo_N9okakwN8AoziR464IHb2es3HK5VIESq2jmHzrGq7S5UHUorMwFxpORBL&share_author_id=6840179287184131077&share_link_id=E9A52346-68C9-466D-B433-1E04A13CA143&tt_from=copy&u_code=dd2lmg2k5k10gg&user_id=6840179287184131077&utm_campaign=client_share&utm_medium=ios&utm_source=copy&source=h5_m" target="_blank" ><i class="iconify" data-icon="fa-brands:tiktok" ></i></a></li>
+               <li><a href="https://discord.com/invite/rdDMgXj?fbclid=IwAR1-0R6kLv-QDuBNiWaz7qOkecjOAvtwCqXlUMzonRI78y40BHt1lU6k-bQ" target="_blank" ><i class="iconify" data-icon="fa-brands:discord" ></i></a></li>
 
             </ul>
          </div>
